prost-reflect-derive/tests/duplicate_attr.stderr
error: multiple #[prost_reflect] attributes
 --> tests/duplicate_attr.rs:8:1
  |
8 | #[prost_reflect(
  | ^
